# libvmod-strutils

./: Makefile.am  configure.ac  strutils.spec.in
src/: Makefile.am  vmod_strutils.c  vmod_strutils.vcc
src/vtc/: vmod_strutils.vtc
